Version 0.993
-------------
* Allow plotwt, plotbp and plotapd to send params though command line

Version 0.992
-------------
* Post DiFX-2.2 / DiFX-2.3

Version 0.991
-------------
* 20120912: Craig updated plotbp to make a second zoomed-in plot if the dynamic range caused by RFI or other strong lines was too high.
* Version for DiFX-2.2